パッケージのインストール処理を変更する