@@ -1,5 +1,6 @@
+# custom IntelliJ IDEA VM options
+
 -Xms2048m
--Xmx4096m
--XX:MaxPermSize=1024m
--XX:ReservedCodeCacheSize=518m
+-Xmx2048m
+-XX:ReservedCodeCacheSize=240m
 -XX:+UseCompressedOops
